# NetworkC

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/: _basegraph.hpp  _math.hpp  graph.hpp
src/: _basegraph.cpp
